--- a/shiranui/templates/post_form.html
+++ b/shiranui/templates/post_form.html
@@ -1,5 +1,9 @@
-<form method="post">
+{% extends 'base.html' %}
+{% block title %}New Blog{% endblock %}
+{% block content %}
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create">
   </form>
+{% endblock %}
