--- a/shiranui/templates/post_list_test.html
+++ b/shiranui/templates/post_list_test.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Blog{% endblock %}
 {% block content %}
-    {% for post in posts %}
+    {% for post in object_list %}
         <h2>{{ post.title }}</h2>
         <p>{{ post.content }}</p>
         <p>Published on {{ post.pub_date }}</p>
